this is my first commit

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,6 +2,8 @@
 {% load tailwind_filters %}
 
 {% block content %}
+
+{% if not request.user.is_authenticated %}
 <div class="max-w-lg mx-auto">
 
     <div class="py-5 border-b border-gray-200">
@@ -18,5 +20,5 @@
      <a type="button" class="hover:text-blue-500 mt-3" href="{% url 'Leads:password_reset' %}">Forgot Password?</a>
     </div>
 </div>
-
+{% endif %}
 {% endblock %}
